(fix): fix the deprecated constructor of URL